--- a/src/App.scss
+++ b/src/App.scss
@@ -10,13 +10,13 @@
 
 .container {
   width: 90%;
-  max-width: 1440px;
-  margin: auto;
+  max-width: 1100px;
+  margin: 64px auto;
   display: grid;
   grid-template-columns: 1fr 2fr;
   grid-gap: 18px;
 }
 
-section {
+.content-section {
   background: #cacaca;
 }
