--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import "./variables.scss";
+
 :root {
   font-size: 10px;
 }
@@ -6,6 +8,22 @@
   margin: 0;
   padding: 0;
   box-sizing: content-box;
+}
+
+body {
+  background: #cacaca;
+  color: $dark-grey1;
+  font-family: $main-font;
+}
+
+ul,
+li {
+  list-style: none;
+}
+
+a {
+  color: #000;
+  text-decoration: none;
 }
 
 .container {
@@ -18,5 +36,16 @@
 }
 
 .content-section {
-  background: #cacaca;
+  background: #ffffff;
+  padding: 22px;
+  border-radius: 14px;
+  &__headline {
+    font-size: 2.4rem;
+    margin-bottom: 16px;
+  }
+  &__description {
+    font-size: 18px;
+    margin-bottom: 16px;
+    color: $light-grey1;
+  }
 }
