Adding content to Experiences section

--- a/src/components/Experiences/Experience.module.scss
+++ b/src/components/Experiences/Experience.module.scss
@@ -1,12 +1,28 @@
+@import "../../variables.scss";
 .experiences {
   &__item {
     display: flex;
+    margin-bottom: 3.6rem;
   }
   &__companyLogo {
-    width: 25%;
-    max-width: 125px;
     img {
-      width: 100%;
+      width: 75px;
     }
+  }
+  &__textContent {
+    margin: 0 32px;
+  }
+  &__time {
+    color: $light-grey1;
+    font-size: 1.4rem;
+    margin-bottom: 1.2rem;
+  }
+  &__position {
+    font-size: 1.6rem;
+    margin-bottom: 3.2rem;
+  }
+  &__description {
+    font-size: 1.6rem;
+    color: $light-grey1;
   }
 }
