--- a/src/components/Hobbies/Hobby.module.scss
+++ b/src/components/Hobbies/Hobby.module.scss
@@ -1,4 +1,6 @@
+@import "../../variables.scss";
 .item {
+  margin-bottom: 3.2rem;
   &__img {
     width: 100%;
     margin-bottom: 2.6rem;
@@ -8,5 +10,9 @@
   }
   &__headline {
     font-size: 1.8rem;
+    margin-bottom: 1rem;
+  }
+  &__description {
+    font-size: 1.6rem;
   }
 }
