--- a/src/App.scss
+++ b/src/App.scss
@@ -30,9 +30,22 @@ a {
   width: 90%;
   max-width: 1100px;
   margin: 64px auto;
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  grid-gap: 18px;
+  header {
+    margin: 9px;
+  }
+  main {
+    display: flex;
+    flex-wrap: wrap;
+    .column-left {
+      width: 35%;
+    }
+    .column-right {
+      width: 65%;
+    }
+    section {
+      margin: 18px 9px;
+    }
+  }
 }
 
 .content-section {
