--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,7 +2,8 @@
 
 $main-font: "Montserrat", Arial, Helvetica, sans-serif;
 
-$dark-grey1: #4f4f4f;
+$dark-grey1: #333333;
+$dark-grey2: #4f4f4f;
 $light-grey1: #828282;
 $light-grey2: #cacaca;
 $orange: #c49104;
