--- a/src/components/Projects/Project.module.scss
+++ b/src/components/Projects/Project.module.scss
@@ -9,9 +9,19 @@
       width: 100%;
     }
   }
+  &__headline {
+    font-size: 2.4rem;
+    margin-bottom: 1.8rem;
+  }
+  &__description {
+    font-size: 1.6rem;
+    margin-bottom: 3.2rem;
+    color: $light-grey1;
+  }
 }
 .tags {
   display: flex;
+  margin-bottom: 1.8rem;
   &__item {
     margin-right: 1.6rem;
     color: $dark-grey2;
