--- a/src/components/Projects/Project.module.scss
+++ b/src/components/Projects/Project.module.scss
@@ -25,6 +25,7 @@
     color: $orange;
     margin-right: 24px;
     border-radius: 12px;
+    display: inline-block;
     &Primary {
       font-size: 1.6rem;
       padding: 12px 40px;
@@ -34,6 +35,7 @@
       border-radius: 12px;
       background: $orange;
       color: #fff;
+      display: inline-block;
     }
   }
 }
