--- a/src/App.scss
+++ b/src/App.scss
@@ -62,3 +62,13 @@ a {
     color: $light-grey1;
   }
 }
+
+.footer {
+  width: 100%;
+  margin-top: 64px;
+  &__text {
+    text-align: center;
+    color: $dark-grey2;
+    font-size: 1.8rem;
+  }
+}
