--- a/src/components/Projects/Project.module.scss
+++ b/src/components/Projects/Project.module.scss
@@ -65,6 +65,11 @@
     margin-right: 1.6rem;
     margin-bottom: 9px;
     color: $dark-grey2;
-    font-size: 1.6rem;
+    button {
+      border: none;
+      background: transparent;
+      cursor: pointer;
+      font-size: 1.6rem;
+    }
   }
 }
